# osdu_perf

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Readme.md  SECURITY.md  V2_PROPOSAL.md  dev.ps1  pyproject.toml  requirements.txt  ruff.toml  setup.py  test-requirements.txt
.github/workflows/: pr-gate.yml  publish.yml
docs/: tech_telemetry_plugin_design.md
osdu_perf/: __init__.py  _version.py  cli.py  errors.py
osdu_perf/auth/: __init__.py  _token.py
osdu_perf/azure/: __init__.py  entitlements.py  executor.py  files.py  resources.py  runner.py
osdu_perf/cli/: __init__.py  _dispatch.py  _parser.py  arg_parser.py  argument_mixins.py  command_base.py  command_factory.py  command_invoker.py  command_registry.py  main.py
osdu_perf/client_base/: user_base.py
osdu_perf/config/: __init__.py  _loader.py  _models.py
osdu_perf/core/: __init__.py  auth.py  azure_test_runner.py  base_service.py  entitlement.py  init_runner.py  input_handler.py  local_test_runner.py  service_orchestrator.py
osdu_perf/k8s/: __init__.py  builder.py  cluster.py  manifests.py  runner.py
osdu_perf/kusto/: __init__.py  ingestion.py  schemas.py
osdu_perf/local/: __init__.py  _runner.py
osdu_perf/locust/: __init__.py  user_base.py
osdu_perf/locust_integration/: __init__.py  middleware.py  request_interceptor.py  user.py  user_base.py
osdu_perf/operations/: __init__.py  auth.py  base_service.py  entitlement.py  init_runner.py  input_handler.py
osdu_perf/scaffolding/: __init__.py  _project.py
osdu_perf/telemetry/: __init__.py  dispatcher.py  plugin_base.py  report.py
osdu_perf/templates/: __init__.py  locustfile_template.py  service_template.py
osdu_perf/testing/: __init__.py  _collector.py  _events.py  base_service.py  context.py  services.py  user.py
osdu_perf/utils/: __init__.py  environment.py  logger.py
scripts/: bump_version.py
tests/: conftest.py
tests/unit/: test_arg_parser.py  test_auth.py  test_azure_loadtest_template.py  test_azure_test_runner.py  test_base_service.py  test_cli.py  test_cli_commands.py  test_cli_parser.py  test_command_base.py  test_config.py  test_config_k8s.py  test_core_functionality.py  test_entitlement.py  test_environment.py  test_error_handling.py  test_events.py  test_example.py  test_input_handler.py  test_input_handler_kusto_config.py  test_k8s_chart.py  test_k8s_manifests.py  test_kusto_schemas.py  (+10 more)
(+58 files in other folders)
