[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osdu-perf"
version = "1.0.0"
authors = [
    {name = "Janraj CJ", email = "janrajcj@microsoft.com"},
]
description = "Performance Testing Framework for OSDU Services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
keywords = ["performance", "testing", "locust", "azure", "osdu"]
dependencies = [
    "locust>=2.0.0",
    "azure-identity>=1.12.0",
    "azure-core>=1.26.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/janraj/osdu-perf"
Documentation = "https://github.com/janraj/osdu-perf#readme"
Repository = "https://github.com/microsoft/adme-perf-testing-framework.git"
Issues = "https://github.com/microsoft/adme-perf-testing-framework/issues"

[project.scripts]
osdu-perf = "osdu_perf.cli:main"

[tool.setuptools.packages.find]
include = ["perf_framework*"]

[tool.setuptools.package-data]
perf_framework = ["templates/*.py", "config/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=perf_framework --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
